Helm/Kyverno-Rules/imagepullpolicy-ifnotpresent.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: imagepullpolicy-ifnotpresent
  annotations:
    policies.kyverno.io/title: Require imagePullPolicy IfNotPresent
    policies.kyverno.io/category: Sample
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      If the `latest` tag is allowed for images, it is a good idea to have the
      imagePullPolicy field set to `IfNotPresent` to ensure should that tag be overwritten that future
      pulls will get the updated image. This policy validates the imagePullPolicy is set to `IfNotPresent`
      when the `latest` tag is specified explicitly or where a tag is not defined at all.      
spec:
  validationFailureAction: audit
  rules:
  - name: imagepullpolicy-ifnotpresent
    match:
      resources:
        kinds:
        - Pod
        namespaces:
        - "ilimit-*"
    validate:
      message: >-
                The imagePullPolicy must be set to `IfNotPresent`.
      pattern:
        spec:
          containers:
          - (image): "*"
            imagePullPolicy: "IfNotPresent"
