Helm/Kyverno-Rules/restrict-image-registries.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-image-registries
  annotations:
    policies.kyverno.io/title: Restrict Image Registries
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/minversion: 1.3.0
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Images from unknown, public registries can be of dubious quality and may not be
      scanned and secured, representing a high degree of risk. Requiring use of known, approved
      registries helps reduce threat exposure by ensuring image pulls only come from them.
spec:
  validationFailureAction: audit
  rules:
  - name: validate-registries
    match:
      resources:
        kinds:
        - Pod
        namespaces:
        - "ilimit-*"
    exclude:
      resources:
        namespaces:
        - ilimit-awx
        - ilimit-corp
        - ilimit-loki
        - ilimit-minio
    validate:
      message: "Only allow registry: registry.ilimit.es"
      pattern:
        spec:
          containers:
          - image: "registry-pre.ilimit.es/*"
